Add profile APIs: delete account, change budget, change username